# Forti-DFIR

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  log_parser.py  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
docs/: Makefile  requirements.txt
docs/source/: cli_guide.rst  code_review.rst  conf.py  contributing.rst  features.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  security.rst  web_app_guide.rst
docs/source/api/: csv_parser_service.rst  log_parser.rst  log_parser_service.rst  modules.rst
tests/: __init__.py  test_parser.py  test_security.py
web_app/: DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  QUICKSTART.md  README.md  docker-compose-alt.yml  docker-compose.yml  netlify.toml  run.bat  run.sh  vercel.json
web_app/backend/: .dockerignore  .env.example  Dockerfile  app.py  config.py  csv_parser_service.py  log_parser.py  log_parser_service.py  requirements-dev.txt  requirements-simple.txt  requirements.txt  simple_app.py
web_app/backend/utils/: __init__.py  input_validation.py  logging_config.py  security.py
web_app/frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
web_app/frontend/public/: index.html
web_app/frontend/src/: App.js  SimpleApp.css  SimpleApp.js  index.css  index.js
web_app/frontend/src/components/: FileUploader.js  Layout.js  PrivateRoute.js  ResultsViewer.js
web_app/frontend/src/contexts/: AuthContext.js
web_app/frontend/src/pages/: Dashboard.js  FirewallParser.js  History.js  Login.js  VPNParser.js  VPNShutdownParser.js
