[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forti-dfir"
version = "1.0.0"
description = "Fortinet Log Parser for DFIR Investigations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "IONSec Research Team", email = "research@ionsec.com"}
]
maintainers = [
    {name = "IONSec Research Team", email = "research@ionsec.com"}
]
keywords = ["fortinet", "dfir", "forensics", "security", "log-parser", "incident-response"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "black>=24.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "safety>=3.2",
]
web = [
    "Flask>=3.0",
    "Flask-CORS>=4.0",
    "flask-limiter>=3.5",
    "flask-jwt-extended>=4.6",
    "flask-talisman>=1.1",
    "redis>=5.0",
    "celery>=5.3",
    "gunicorn>=21.0",
    "python-magic>=0.4.27",
    "cryptography>=42.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=3.0",
]
all = [
    "forti-dfir[dev,web,docs]",
]

[project.urls]
Homepage = "https://github.com/ionsec/Forti-DFIR"
Documentation = "https://forti-dfir.readthedocs.io"
Repository = "https://github.com/ionsec/Forti-DFIR.git"
Issues = "https://github.com/ionsec/Forti-DFIR/issues"
Changelog = "https://github.com/ionsec/Forti-DFIR/blob/main/CHANGELOG.md"

[project.scripts]
forti-dfir = "log_parser:main"

[tool.setuptools.packages.find]
include = ["log_parser*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # assert used (needed for tests)
    "S608",   # possible SQL injection (not applicable)
    "B008",   # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG"]
"__init__.py" = ["F401"]

[tool.black]
target-version = ["py311"]
line-length = 100
skip-string-normalization = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["venv", "node_modules", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=web_app/backend --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["web_app/backend"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "node_modules"]
skips = ["B101", "B601"]
